- Make tests check for signals.  int/fp /0 and bus errors.
- Create a prefs structure instead of just having globals scattered everywhere.
- Add the ability to temporarily disable tests but leave them in the test deck.
- Add ability to specify an optional timeout.
- There's got to be a better API than show_inversions
- Add an epsilon to the floating point comparisons?
  This is a little scary...  it can confuse the heck out of you if 
  you don't know exactly what's going on.  Don't add until someone wants it.
- AssertStrEmpty and AssertStrNonEmpty suck.  Clean them up?
  It won't be easy...  They work well.
- Make ctest's asserts behave more like regular asserts when used outside
  a ctest_start block.
- Add the ability to fork before each test.  It's a pretty useless feature
- Add ability to run only the named test or tests.
	 --skip or --only to select tests to run,
  but some guys seem pretty hot about this.
- Can I get rid of nesting asserts?  That would make things simpler.
- It's lame that I need to declare the test function and start the test
  separately.  Make a macro so I can just cunit_test(ints) { ... }
- Fix ctest_show_failures, so gross
- Make a homepage for it, replace the URL in the readme file.
- Instead of creating an implicit test structure, I should just prepare
  the assert without the test and then worry about it if it fails.

Version 0.8, IN PROGRESS
- Renamed mutest to ctest.  A generic name is better than a lame one.
- Get rid of mutest-config.  it was a complex solution to a simple problem.

Version 0.71, 20 Oct 2007
- created the mutest_start macro, cleaned up the assertion routines.
- Created test flavors.  Now it's easy for people to customize their asserts.
- Split mutest from tmtest's zutest.c/.h files.
- Got rid of mutest_proc, now clients handle calling the unit tests 100%

Version 0.7,  16 Feb 2007
- turn dependency tree into functions

Version 0.62, 22 Jan 2007
- clean up failure messages

Version 0.61, 30 Apr 2006 