@@ -49,7 +49,7 @@ struct ctest_jmp_wrapper {
  * when the flow of control exits the block that follows ctest_start.
  */
 #define ctest_start(name) 									\
-		if(setjmp(ctest_internal_start_test(name, __FILE__,__LINE__,0)->jmp)) {	\
+		if(setjmp(ctest_internal_start_test(name, __FILE__,__LINE__)->jmp)) {	\
 			ctest_internal_test_jumped();							\
 		} else for(; ctest_internal_test_finished(); )
 
@@ -103,7 +103,7 @@ void ctest_assert_succeeded();
 /* The following routines are not meant to be called directly; they are used
  * by the mutest_start() macro and highly subject to change.
  */
-struct ctest_jmp_wrapper* ctest_internal_start_test(const char *name, const char *file, int line, int impromptou);
+struct ctest_jmp_wrapper* ctest_internal_start_test(const char *name, const char *file, int line);
 struct ctest_jmp_wrapper* ctest_internal_start_inverted_test(const char *name, const char *file, int line);
 void ctest_internal_test_jumped();
 int ctest_internal_test_finished();
